# nifty50-multimodal-transformer

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  run_experiment.ipynb
.agent-skills/ci-cd-and-automation/: SKILL.md
.agent-skills/code-review-and-quality/: SKILL.md
.agent-skills/documentation-and-adrs/: SKILL.md
.agent-skills/incremental-implementation/: SKILL.md
.agent-skills/planning-and-task-breakdown/: SKILL.md
.agent-skills/spec-driven-development/: SKILL.md
.agent-skills/test-driven-development/: SKILL.md
.github/workflows/: ablation-runner.yml  ci.yml  image-multimodal.yml  text-multimodal.yml
.kiro/steering/: coding-standards.md
config/: nifty50_full.txt  nifty50_sample.txt
data/toy/: event_records.csv  index_ohlcv.csv  stock_ohlcv.csv  (+1 more)
docs/: architecture.md  design-notes.md  findings.md  real-world-demo.md
notebooks/: README.md  run_experiment.ipynb
scripts/: build_multimodal_samples.py  check_modality_independence.py  real_data_smoke_test.py  run_ablation_study.py  run_backtest.py  run_e2e_demo.py  run_real_world_demo.py  run_session65_diagnostics.py  run_session7_diagnostics.py  run_training_trace.py  verify_tabular_baseline.py  visualize_real_world_demo.py
specs/: fix_model_collapse.md  image-multimodal-samples.md  kg-multimodal-samples.md  multimodal-ablation-runner.md  real-world-demo.md  real_news_finbert_ingestion.md  run_backtest.md  tabular-multimodal-samples.md  text-multimodal-samples.md  true-multimodal-sample-builder.md
src/: __init__.py
tests/: conftest.py  test_smoke_components.py
(+110 files in other folders)
