[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nifty50-multimodal-transformer"
version = "0.1.0"
description = "Multimodal Transformer for Nifty-50 relative outperformance prediction"
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast deterministic unit tests",
    "smoke: lightweight component smoke tests",
    "integration: tiny end-to-end pipeline checks",
]
